[project]
name = "sms-dashboard"
license = "MIT"
version = "0.1.0"
description = "A web-based dashboard for managing and monitoring SMS messages, built with Flask and MySQL."
authors = [
    { name = "Mohammad Ahmadi", email = "mohammad.ahmadi98@proton.me" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask>=2.0",
    "mysql-connector-python>=8.0",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0"
]

[tool.poetry]
packages = [{ include = "sms_dash_v2", from = "src" }]
package-mode = false
